[package]
name = "domain_keys"
version = "0.5.1"
edition = "2021"
authors = ["darryl.west@raincitysoftware.com"]
rust-version = "1.63"
description = "A rust library & cli for key generation for domain entity identifiers e.g., user, provider, inventory item, etc."
keywords = ["keys", "key-generation", "unique-id"]
categories = ["database", "kv", "kv store", "routing" ]
license = "MIT OR Apach-2.0"
readme = "README.md"
repository = "https://github.com/darrylwest/domain-keys"
exclude = [ ".github/*" ]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

