[package]
name = "domain_keys"
version = "0.6.1"
edition = "2021"
authors = ["darryl.west@raincitysoftware.com"]
rust-version = "1.63"
description = "A rust library & cli for key generation for domain entity identifiers e.g., user, provider, inventory item, etc."
keywords = ["keys", "key-generation", "unique-id"]
categories = ["database", "kv", "kv store", "routing" ]
license = "MIT OR Apach-2.0"
readme = "README.md"
homepage = "https://github.com/darrylwest/domain-keys"
repository = "https://github.com/darrylwest/domain-keys"
exclude = [ ".github/*" ]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
fastrand = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
